syntax = "proto3";

package admin;


service AdminService {
  rpc CreateNews(CreateNewsRequest) returns (CreateNewsResponse) {}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse){}
}

message SimpleUser {
  uint32 id = 1;
  string login = 2;
  string role = 3;
}

message CreateNewsRequest {
  string text = 1;
}

message CreateNewsResponse {
  uint32 id = 1;
  string text = 2;

}

message GetUsersRequest {
  uint64 count = 1;
  uint64 offset = 2;
}

message GetUsersResponse {
  repeated SimpleUser users = 1;
}