syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
}

message User {
  uint32 id = 1;
  string login = 2;
  string accessToken = 3;
  string refreshToken = 4;
  string role = 5;
}

message GetUsersRequest {
  uint32 count = 1;
  uint32 offset = 2;
}

message SimpleUser {
  uint32 id = 1;
  string login = 2;
  string role = 3;
}

message GetUsersResponse {
  repeated SimpleUser users = 1;
}

message GetRoleRequest {
  string accessToken = 1;
}

message GetRoleResponse {
  string role = 1;
}

message LogoutRequest {
  string refreshToken = 1;
}

message LogoutResponse {
  
}

message ValidateRequest {
  string accessToken = 1;
}

message ValidateResponse {
  uint32 id = 1;
  string login = 2;
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  User user = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string accessToken = 1;
  string refreshToken = 2;
}